Fix issues with scrollbars

--- a/geo-ai-explorer-ui/src/app/attribute-panel/attribute-panel.component.scss
+++ b/geo-ai-explorer-ui/src/app/attribute-panel/attribute-panel.component.scss
@@ -21,9 +21,9 @@ td {
  * Hacking into the ng-prime table styles, unfortunately
  */
 
-::ng-deep .p-datatable-table-container {
-    overflow: initial !important;
-}
+// ::ng-deep .p-datatable-table-container {
+//     overflow: initial !important;
+// }
 ::ng-deep table.p-datatable-table {
     table-layout: fixed !important;
 }
